fix: horizontal scroll issue on mobile

--- a/src/components/Footer/Footer.module.scss
+++ b/src/components/Footer/Footer.module.scss
@@ -11,10 +11,9 @@
     flex-direction: row;
     width: 30rem;
     li{
-      width: 7rem;
       text-align: center;
       font-size: .7rem;
-      padding: 1rem 0;
+      padding: 1rem 0.5rem;
       cursor: pointer;
     }
   }
@@ -23,8 +22,19 @@
     flex-direction: column;
   }
 }
+
 .mainDiv {
   display: flex;
   flex-direction: row;
   justify-content: space-between;
+}
+
+.copyrightPc {
+  padding: .9rem 0 .9rem 3rem;
+  width: 13rem;
+}
+
+.copyrightMobile {
+  padding: 1rem;
+  margin: 0 auto;
 }
